--- a/setup.cfg
+++ b/setup.cfg
@@ -17,10 +17,10 @@ classifiers =
 packages = find:
 install_requires =
     Pillow>=8.1.0
-    numpy>=1.20.0rc2
+    numpy
     wheel
 python_requires = >=3.8.5
 
 [options.entry_points]
 console_scripts =
-    pxsrt = pxsrt.main:main
+    pxsrt = pxsrt.__main__:cli
