--- a/setup.cfg
+++ b/setup.cfg
@@ -24,3 +24,7 @@ python_requires = >=3.8.5
 [options.entry_points]
 console_scripts =
     pxsrt = pxsrt.__main__:cli
+
+[mypy]
+check_untyped_defs = true
+disallow_untyped_defs = true
