UPDATE: Updated setup.cfg to include setup_require wheel.

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,11 @@ classifiers =
 
 [options]
 packages = find:
+setup_requires =
+    wheel
 install_requires =
     Pillow>=8.1.0
     numpy
-    wheel
 python_requires = >=3.8.5
 
 [options.entry_points]
