UPDATE: pre-commit hooks linting + pstats log

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,12 +15,12 @@ classifiers =
 
 [options]
 packages = find:
-setup_requires =
-    wheel
 install_requires =
     Pillow>=8.1.0
     numpy
 python_requires = >=3.8.5
+setup_requires =
+    wheel
 
 [options.entry_points]
 console_scripts =
@@ -29,3 +29,4 @@ console_scripts =
 [mypy]
 check_untyped_defs = true
 disallow_untyped_defs = true
+exclude = ./pxsrt/loggers.py
