--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@ __pycache__
 /test_env/*
 /venv
 logging.log
-.mypy.ini
-.mypy_cache
+/*_cache
 /tests/
 /pxsrt.egg-info
 /images
+Dockerfile
+Dockerfile.save
