ADDED: testing against python versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,12 +4,15 @@ version = 1.0.0
 description = pxsrt is a package that sorts the pixels of an image
 long_description = file: README.md
 long_description_content_type = text/markdown
+url = https://www.github.com/oprince-tech/pxsrt
 author = Oliver Prince
 author_email = oprince.tech@gmail.com
 license = MIT
 classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: Implementation :: CPython
@@ -19,7 +22,7 @@ packages = find:
 install_requires =
     Pillow>=8.1.0
     numpy
-python_requires = >=3.8.5
+python_requires = >=3.6
 setup_requires =
     wheel
 
@@ -30,4 +33,4 @@ console_scripts =
 [mypy]
 check_untyped_defs = true
 disallow_untyped_defs = true
-exclude = ./pxsrt/loggers.py
+exclude = ./pxsrt/tests.py
