--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,30 @@
 [tox]
-envlist = py38,coverage
+envlist = py36,py37,py38,py39
 
-[testenv:coverage]
+[testenv:py36]
 deps = -rrequirements-dev.txt
 commands =
-	coverage erase
-	coverage run --omit '.tox/*' -m pytest --showlocals --capture=no -vv
+	coverage run --omit '.tox/*' -m pytest {posargs:tests} --showlocals --capture=no -vv
 	coverage report
-	coverage html
+	coverage html -d htmlcov/py36
+
+[testenv:py37]
+deps = -rrequirements-dev.txt
+commands =
+	coverage run --omit '.tox/*' -m pytest {posargs:tests} --showlocals --capture=no -vv
+	coverage report
+	coverage html -d htmlcov/py37
+
+[testenv:py38]
+deps = -rrequirements-dev.txt
+commands =
+	coverage run --omit '.tox/*' -m pytest {posargs:tests} --showlocals --capture=no -vv
+	coverage report
+	coverage html -d htmlcov/py38
+
+[testenv:py39]
+deps = -rrequirements-dev.txt
+commands =
+	coverage run --omit '.tox/*' -m pytest {posargs:tests} --showlocals --capture=no -vv
+	coverage report
+	coverage html -d htmlcov/py39
