--- a/setup.cfg
+++ b/setup.cfg
@@ -21,8 +21,8 @@ classifiers =
 packages = find:
 install_requires =
     Pillow>=8.1.0
-    numpy
-python_requires = >=3.6
+    numpy>=1.20.0
+python_requires = >=3.6.5
 setup_requires =
     wheel
 
