--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,5 @@
 [tox]
-envlist = py36,py37,py38,py39
-
-[testenv:py36]
-deps = -rrequirements-dev.txt
-commands =
-	coverage run --omit '.tox/*' -m pytest {posargs:tests} --showlocals --capture=no -vv
-	coverage report
-	coverage html -d htmlcov/py36
+envlist = py37,py38,py39
 
 [testenv:py37]
 deps = -rrequirements-dev.txt
